--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
     <header>
         <nav>
-        <a href="/">
-            <img src="./images/logo.svg">
-        </a>
+        <a href="./index.html">WebStudio</a>
 
     <ul>
         <li><a href="">Студия</a></li>
@@ -58,9 +56,9 @@
 
         <h2>Чем мы занимаемся</h2>
         <ul>
-        <li><img src="./images/photo1.svg" alt="Notebook" width="370"></li>
-        <li><img src="./images/photo2.svg" alt="Mobilephone" width="370"></li>
-        <li><img src="./images/photo3.svg" alt="Tablet" width="370"></li>
+        <li><img src="./images/Notebook.jpg" alt="Ноутбук" width="370"></li>
+        <li><img src="./images/Mobilephone.jpg" alt="Телефон" width="370"></li>
+        <li><img src="./images/Tablet.jpg" alt="Планшет" width="370"></li>
         </ul>
 
     </section>
@@ -69,25 +67,25 @@
         <h2>Наша команда</h2>        
 <ul>
     <li>        
-        <img src="./images/person1.svg" alt="Ihor" width="270">
+        <img src="./images/Ihor.jpg" alt="Игорь Демьяненко" width="270">
         <h3>Игорь Демьяненко</h3>
         <p>Product Designer</p>
     </li>
 
     <li>
-        <img src="./images/person2.svg" alt="Olha" width="270">
+        <img src="./images/Olha.jpg" alt="Ольга Репина" width="270">
         <h3>Ольга Репина</h3>
         <p>Frontend Developer</p>
     </li>
     
     <li>
-        <img src="./images/person3.svg" alt="Nikolay" width="270">
+        <img src="./images/Nikolay.jpg" alt="Николай Тарасов" width="270">
         <h3>Николай Тарасов</h3>
         <p>Marketing</p>
     </li>
 
     <li>
-        <img src="./images/person4.svg" alt="Michael" width="270">
+        <img src="./images/Michael.jpg" alt="Михаил Ермаков" width="270">
         <h3>Михаил Ермаков</h3>
         <p>UI Designer</p>
     </li>
@@ -95,6 +93,16 @@
     </section>
 </main>
 
-    <footer></footer>
+    <footer>
+        <a href="./index.html">WebStudio</a>
+        <address>
+        г. Киев, пр-т Леси Украинки, 26
+        <ul>
+            <li><a href="mailto:info@example.com">info@example.com</a></li>
+            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+                </ul>
+        </address>    
+    </footer>
 </body>
 </html>
+
