--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!--Шапка-->
     <header>
         <nav>
         <a href="./index.html">WebStudio</a>
@@ -25,12 +26,15 @@
     </header>
 
 <main>
+    <!--Герой-->
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
-
+    <!--Преимущества-->
     <section>
+        <!--Заголовок, который в будущем спрячется, добавляю для семантики-->
+        <h2>Преимущества</h2>
         <ul>
             <li>
                 <h3>Внимание к деталям</h3>
@@ -53,39 +57,44 @@
                 <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
+        </section>
 
+        <!--Деятельность-->
+        <section>
         <h2>Чем мы занимаемся</h2>
+        
         <ul>
-        <li><img src="./images/Notebook.jpg" alt="Ноутбук" width="370"></li>
-        <li><img src="./images/Mobilephone.jpg" alt="Телефон" width="370"></li>
-        <li><img src="./images/Tablet.jpg" alt="Планшет" width="370"></li>
+        <li><img src="./images/notebook.jpg" alt="Ноутбук" width="370"></li>
+        <li><img src="./images/mobilephone.jpg" alt="Телефон" width="370"></li>
+        <li><img src="./images/tablet.jpg" alt="Планшет" width="370"></li>
         </ul>
 
     </section>
 
+    <!--Наша команда-->
     <section>
         <h2>Наша команда</h2>        
 <ul>
     <li>        
-        <img src="./images/Ihor.jpg" alt="Игорь Демьяненко" width="270">
+        <img src="./images/ihor.jpg" alt="Игорь Демьяненко" width="270">
         <h3>Игорь Демьяненко</h3>
         <p>Product Designer</p>
     </li>
 
     <li>
-        <img src="./images/Olha.jpg" alt="Ольга Репина" width="270">
+        <img src="./images/olha.jpg" alt="Ольга Репина" width="270">
         <h3>Ольга Репина</h3>
         <p>Frontend Developer</p>
     </li>
     
     <li>
-        <img src="./images/Nikolay.jpg" alt="Николай Тарасов" width="270">
+        <img src="./images/nikolay.jpg" alt="Николай Тарасов" width="270">
         <h3>Николай Тарасов</h3>
         <p>Marketing</p>
     </li>
 
     <li>
-        <img src="./images/Michael.jpg" alt="Михаил Ермаков" width="270">
+        <img src="./images/michael.jpg" alt="Михаил Ермаков" width="270">
         <h3>Михаил Ермаков</h3>
         <p>UI Designer</p>
     </li>
@@ -93,6 +102,7 @@
     </section>
 </main>
 
+    <!--Футер-->
     <footer>
         <a href="./index.html">WebStudio</a>
         <address>
