--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
     <!--Футер-->
     <footer>
         <a href="./index.html">WebStudio</a>
-        <address>
-        г. Киев, пр-т Леси Украинки, 26
+        <address>                
         <ul>
+            <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
             <li><a href="mailto:info@example.com">info@example.com</a></li>
             <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
                 </ul>
