Добавляет цвета, шрифты

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <body class="page">
     <!--Шапка-->
     <header class="page-header">
-        <nav>
-        <a href="./index.html">
-            <span class="logo-1part">Web</span><span class="logo-2part">Studio</span></a>
+        <nav class="nav">
+    <a href="./index.html" class="nav-logo">
+        <span class="logo-accent">Web</span>Studio</a>
 
     <ul class="site-nav">
         <li><a href="./index.html" class="link current">Студия</a></li>
@@ -51,26 +51,26 @@
     <section class="features">
         <!--Заголовок, который в будущем спрячется, добавляю для семантики-->
         <h2 class="section-title">Преимущества</h2>
-        <ul>
+        <ul class="features-list">
             <li>
-                <h3 class="features-title">Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                <h3 class="features-list-title">Внимание к деталям</h3>
+                <p class="features-list-text"> Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             
             <li>
-                <h3 class="features-title">Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <h3 class="features-list-title">Пунктуальность</h3>
+                <p class="features-list-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
 
             
             <li>
-                <h3 class="features-title">Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <h3 class="features-list-title">Планирование</h3>
+                <p class="features-list-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
 
             <li>
-                <h3 class="features-title">Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <h3 class="features-list-title">Современные технологии</h3>
+                <p class="features-list-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
         </section>
@@ -119,8 +119,10 @@
 </main>
 
     <!--Футер-->
-    <footer class="footer">
-        <a href="./index.html"><span class="logo-1part">Web</span><span class="logo-2part">Studio</span></a>
+<footer class="footer">
+        <nav class="nav">
+            <a href="./index.html" class="nav-logo">
+                <span class="logo-accent">Web</span>Studio</a></nav>
         <address>                
         <ul class="footer-info">
             <li><a href="" class="footer-address">г. Киев, пр-т Леси Украинки, 26</a></li>
@@ -129,6 +131,6 @@
                 class="footer-contacts">+38 099 111 11 11</a></li>
                 </ul>
         </address>    
-    </footer>
+</footer>
 </body>
 </html>
