--- a/portfolio.html
+++ b/portfolio.html
@@ -24,9 +24,9 @@
 <body class="page">
         <!--Шапка-->
         <header class="page-header">
-            <nav>
-                <a href="./index.html">
-                    <span class="logo-1part">Web</span><span class="logo-2part">Studio</span></a>
+            <nav class="nav">
+                <a href="./index.html" class="nav-logo">
+                    <span class="logo-accent">Web</span>Studio</a>
         
                 <ul class="site-nav">
                     <li><a
@@ -73,59 +73,59 @@
             <section class="section">
                 <!--Заголовок для семантики-->
                 <h2>Примеры работ</h2>
-                <ul>
-                    <li><a href="">
+                <ul class="work-list">
+                    <li><a href="" class="work-list-item">
                         <img src="./images/portfolio/tehno.jpg" alt="Технокряк" width="370">
-                        <h3 class="">Технокряк</h3>
-                        <p>Веб-сайт</p>
+                        <h3 class="work-list-title">Технокряк</h3>
+                        <p class="work-list-text">Веб-сайт</p>
                         </a>
                         </li>
-                    <li> <a href="">
+                    <li> <a href="" class="work-list-item">
                         <img src="./images/portfolio/orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                        <h3 class="">Постер New Orlean vs Golden Star</h3>
-                        <p>Дизайн</p>
+                        <h3 class="work-list-title">Постер New Orlean vs Golden Star</h3>
+                        <p class="work-list-text">Дизайн</p>
                         </a>
                         </li>
-                    <li> <a href="">
+                    <li> <a href="" class="work-list-item">
                         <img src="./images/portfolio/restoraunt.jpg" alt="Ресторан Seafood" width="370">
-                        <h3 class="">Ресторан Seafood</h3>
-                        <p>Приложение</p>
+                        <h3 class="work-list-title">Ресторан Seafood</h3>
+                        <p class="work-list-text">Приложение</p>
                         </a>
                         </li>
-                    <li> <a href="">
+                    <li> <a href="" class="work-list-item">
                         <img src="./images/portfolio/prime.jpg" alt="Проект Prime" width="370">
-                        <h3 class="">Проект Prime</h3>
-                        <p>Маркетинг</p>
+                        <h3 class="work-list-title">Проект Prime</h3>
+                        <p class="work-list-text">Маркетинг</p>
                         </a>
                         </li>
-                    <li> <a href="">
+                    <li> <a href="" class="work-list-item"> 
                         <img src="./images/portfolio/box.jpg" alt="Проект Boxes" width="370">
-                        <h3 class="">Проект Boxes</h3>
-                        <p>Приложение</p>
+                        <h3 class="work-list-title">Проект Boxes</h3>
+                        <p class="work-list-text">Приложение</p>
                         </a>
                         </li>
-                    <li> <a href="">
+                    <li> <a href="" class="work-list-item">
                         <img src="./images/portfolio/inspirations.jpg" alt="Веб-сайт Inspiration has no Borders" width="370">
-                        <h3 class="">Inspiration has no Borders</h3>
-                        <p>Веб-сайт</p>
+                        <h3 class="work-list-title">Inspiration has no Borders</h3>
+                        <p class="work-list-text">Веб-сайт</p>
                         </a>
                         </li>
-                    <li> <a href="">
+                    <li> <a href="" class="work-list-item"> 
                         <img src="./images/portfolio/limited.jpg" alt="Издание Limited Edition" width="370">
-                        <h3 class="">Издание Limited Edition</h3>
-                        <p>Дизайн</p>
+                        <h3 class="work-list-title">Издание Limited Edition</h3>
+                        <p class="work-list-text">Дизайн</p>
                         </a>
                         </li>
-                    <li> <a href="">
+                    <li> <a href="" class="work-list-item">
                         <img src="./images/portfolio/lab.jpg" alt="Проект LAB" width="370">
-                        <h3 class="">Проект LAB</h3>
-                        <p>Маркетинг</p>
+                        <h3 class="work-list-title">Проект LAB</h3>
+                        <p class="work-list-text">Маркетинг</p>
                         </a>
                         </li>
-                    <li> <a href="">
+                    <li> <a href="" class="work-list-item">
                         <img src="./images/portfolio/business.jpg" alt="Приложение Growing Business" width="370">
-                        <h3 class="">Growing Business</h3>
-                        <p>Приложение</p>
+                        <h3 class="work-list-title">Growing Business</h3>
+                        <p class="work-list-text">Приложение</p>
                         </a>
                         </li>
                 </ul>
@@ -135,7 +135,9 @@
         
         <!--Футер-->
         <footer class="footer">
-            <a href="./index.html"><span class="logo-1part">Web</span><span class="logo-2part">Studio</span></a>
+            <nav class="nav">
+                <a href="./index.html" class="nav-logo">
+                    <span class="logo-accent">Web</span>Studio</a></nav>
             <address>
                 <ul class="footer-info">
                     <li><a
