--- a/index.html
+++ b/index.html
@@ -90,28 +90,28 @@
     <!--Наша команда-->
     <section class="section">
         <h2 class="section-title">Наша команда</h2>        
-<ul>
+<ul class="members">
     <li>        
         <img src="./images/ihor.jpg" alt="Игорь Демьяненко" width="270">
-        <h3 class="">Игорь Демьяненко</h3>
+        <h3 class="members-title">Игорь Демьяненко</h3>
         <p>Product Designer</p>
     </li>
 
     <li>
         <img src="./images/olha.jpg" alt="Ольга Репина" width="270">
-        <h3 class="">Ольга Репина</h3>
+        <h3 class="members-title">Ольга Репина</h3>
         <p>Frontend Developer</p>
     </li>
     
     <li>
         <img src="./images/nikolay.jpg" alt="Николай Тарасов" width="270">
-        <h3 class="">Николай Тарасов</h3>
+        <h3 class="members-title">Николай Тарасов</h3>
         <p>Marketing</p>
     </li>
 
     <li>
         <img src="./images/michael.jpg" alt="Михаил Ермаков" width="270">
-        <h3 class="">Михаил Ермаков</h3>
+        <h3 class="members-title">Михаил Ермаков</h3>
         <p>UI Designer</p>
     </li>
 </ul>
