Вносит изменения по замечаниям на доработку

--- a/index.html
+++ b/index.html
@@ -94,25 +94,25 @@
     <li>        
         <img src="./images/ihor.jpg" alt="Игорь Демьяненко" width="270">
         <h3 class="members-title">Игорь Демьяненко</h3>
-        <p>Product Designer</p>
+        <p class="members-text">Product Designer</p>
     </li>
 
     <li>
         <img src="./images/olha.jpg" alt="Ольга Репина" width="270">
         <h3 class="members-title">Ольга Репина</h3>
-        <p>Frontend Developer</p>
+        <p class="members-text">Frontend Developer</p>
     </li>
     
     <li>
         <img src="./images/nikolay.jpg" alt="Николай Тарасов" width="270">
         <h3 class="members-title">Николай Тарасов</h3>
-        <p>Marketing</p>
+        <p class="members-text">Marketing</p>
     </li>
 
     <li>
         <img src="./images/michael.jpg" alt="Михаил Ермаков" width="270">
         <h3 class="members-title">Михаил Ермаков</h3>
-        <p>UI Designer</p>
+        <p class="members-text">UI Designer</p>
     </li>
 </ul>
     </section>
@@ -122,7 +122,7 @@
 <footer class="footer">
         <nav class="nav">
             <a href="./index.html" class="nav-logo">
-                <span class="logo-accent">Web</span>Studio</a></nav>
+                <span class="logo-accent">Web</span><span class="logo-white">Studio</span></a></nav>
         <address>                
         <ul class="footer-info">
             <li><a href="" class="footer-address">г. Киев, пр-т Леси Украинки, 26</a></li>
