--- a/index.html
+++ b/index.html
@@ -100,23 +100,23 @@
     <ul class="members-list">
         <li class="members-item">        
             <img src="./images/ihor.jpg" alt="Игорь Демьяненко" width="270">
-            <h3 class="members-title">Игорь Демьяненко</h3>
-            <p class="members-text">Product Designer</p>            
+            <div class="members-box"><h3 class="members-title">Игорь Демьяненко</h3>
+            <p class="members-text">Product Designer</p></div>            
         </li>
         <li class="members-item">
             <img src="./images/olha.jpg" alt="Ольга Репина" width="270">
-            <h3 class="members-title">Ольга Репина</h3>
-            <p class="members-text">Frontend Developer</p>            
+            <div class="members-box"><h3 class="members-title">Ольга Репина</h3>
+            <p class="members-text">Frontend Developer</p></div>            
         </li>        
         <li class="members-item">
             <img src="./images/nikolay.jpg" alt="Николай Тарасов" width="270">
-            <h3 class="members-title">Николай Тарасов</h3>
-            <p class="members-text">Marketing</p>            
+            <div class="members-box"><h3 class="members-title">Николай Тарасов</h3>
+            <p class="members-text">Marketing</p></div>            
         </li>
         <li class="members-item">
             <img src="./images/michael.jpg" alt="Михаил Ермаков" width="270">
-            <h3 class="members-title">Михаил Ермаков</h3>
-            <p class="members-text">UI Designer</p>            
+            <div class="members-box"><h3 class="members-title">Михаил Ермаков</h3>
+            <p class="members-text">UI Designer</p></div>           
         </li>
     </ul>
     </div>
@@ -124,8 +124,8 @@
 </main>
 
     <!--Футер-->
-<footer class="footer">
-    <div class="footer container">
+<footer class="footer section">
+    <div class="container">
         <nav class="footer nav">
             <a href="./index.html" class="nav-logo">
                 <span class="logo-accent">Web</span><span class="logo-white">Studio</span></a></nav>
