--- a/portfolio.html
+++ b/portfolio.html
@@ -61,56 +61,74 @@
         <ul class="work-list">
             <li class="work-list-item"><a href="" class="work-list-link">
                 <img src="./images/portfolio/tehno.jpg" alt="Технокряк" width="370">
+                <div class="work-list-box">
                 <h2 class="work-list-title">Технокряк</h2>
                 <p class="work-list-text">Веб-сайт</p>
+                </div>
                 </a>
             </li>
             <li class="work-list-item"> <a href="" class="work-list-link">
                 <img src="./images/portfolio/orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                <div class="work-list-box">
                 <h2 class="work-list-title">Постер New Orlean vs Golden Star</h2>
                 <p class="work-list-text">Дизайн</p>
+                </div>
                 </a>
             </li>
             <li class="work-list-item"> <a href="" class="work-list-link">
                 <img src="./images/portfolio/restoraunt.jpg" alt="Ресторан Seafood" width="370">
+                <div class="work-list-box">
                 <h2 class="work-list-title">Ресторан Seafood</h2>
                 <p class="work-list-text">Приложение</p>
+                </div>
                 </a>
             </li>
             <li class="work-list-item"> <a href="" class="work-list-link">
                 <img src="./images/portfolio/prime.jpg" alt="Проект Prime" width="370">
+                <div class="work-list-box">
                 <h2 class="work-list-title">Проект Prime</h2>
                 <p class="work-list-text">Маркетинг</p>
+                </div>
                 </a>
             </li>
             <li class="work-list-item"> <a href="" class="work-list-link"> 
                 <img src="./images/portfolio/box.jpg" alt="Проект Boxes" width="370">
+                <div class="work-list-box">
                 <h2 class="work-list-title">Проект Boxes</h2>
                 <p class="work-list-text">Приложение</p>
+                </div>
                 </a>
             </li>
             <li class="work-list-item"> <a href="" class="work-list-link">
                 <img src="./images/portfolio/inspirations.jpg" alt="Веб-сайт Inspiration has no Borders" width="370">
+                <div class="work-list-box">
                 <h2 class="work-list-title">Inspiration has no Borders</h2>
                 <p class="work-list-text">Веб-сайт</p>
+                </div>
                 </a>
             </li>
             <li class="work-list-item"> <a href="" class="work-list-link"> 
                 <img src="./images/portfolio/limited.jpg" alt="Издание Limited Edition" width="370">
+                <div class="work-list-box">
                 <h2 class="work-list-title">Издание Limited Edition</h2>
                 <p class="work-list-text">Дизайн</p>
+                </div>
                 </a>
             </li>
             <li class="work-list-item"> <a href="" class="work-list-link">
                 <img src="./images/portfolio/lab.jpg" alt="Проект LAB" width="370">
+                <div class="work-list-box">
                 <h2 class="work-list-title">Проект LAB</h2>
                 <p class="work-list-text">Маркетинг</p>
+                </div>
                 </a>
             </li>
             <li class="work-list-item"> <a href="" class="work-list-link">
                 <img src="./images/portfolio/business.jpg" alt="Приложение Growing Business" width="370">
+                <div class="work-list-box">
                 <h2 class="work-list-title">Growing Business</h2>
                 <p class="work-list-text">Приложение</p>
+                </div>
                 </a>
             </li>
         </ul>
@@ -119,8 +137,8 @@
 </main>
 
 <!--Футер-->
-<footer class="footer">
-    <div class="footer container">
+<footer class="footer section">
+    <div class="container">
         <nav class="footer nav">
             <a
                 href="./index.html"
@@ -145,7 +163,6 @@
             </ul>
         </address>
     </div>
-</footer>
 </footer>
 </body>
 </html>
