--- a/portfolio.html
+++ b/portfolio.html
@@ -29,17 +29,54 @@
 <!--Шапка-->
 <header class="page-header">
     <div class="container nav">
-        <nav class="nav main-nav"><a href="./index.html" class="nav-logo">
+        <nav class="nav main-nav">
+            <a
+                href="./index.html"
+                class="nav-logo"
+            >
                 <span class="logo-accent">Web</span>Studio</a>
             <ul class="site-nav">
-                <li class="item"><a href="./index.html" class="link ">Студия</a></li>
-                <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
-                <li class="item"><a href="" class=link >Контакты</a></li>
+                <li class="item"><a
+                        href="./index.html"
+                        class="link current"
+                    >Студия</a></li>
+                <li class="item"><a
+                        href="./portfolio.html"
+                        class=link
+                    >Портфолио</a></li>
+                <li class="item"><a
+                        href=""
+                        class=link
+                    >Контакты</a></li>
             </ul>
             <ul class="contacts-nav">
-                <li class="item"><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
-                <li class="item"><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11
-                </a></li>
+                <li class="contacts item">
+                    <svg
+                        class="email-icon"
+                        width="16"
+                        height="12"
+                    >
+                        <use href="images/icons.svg#icon-email"></use>
+                    </svg>
+                    <a
+                        href="mailto:info@devstudio.com"
+                        class="contact-link"
+                    >info@devstudio.com</a>
+                </li>
+                <li class="contacts item">
+                    <svg
+                        class="phone-icon"
+                        width="13"
+                        height="19"
+                    >
+                        <use href="images/icons.svg#icon-phone"></use>
+                    </svg>
+                    <a
+                        href="tel:+380961111111"
+                        class="contact-link"
+                    >+38 096 111 11 11</a>
+
+                </li>
             </ul>
         </nav>
     </div>
