--- a/index.html
+++ b/index.html
@@ -38,25 +38,18 @@
         <li class="item"><a href="" class=link>Контакты</a></li>
     </ul>        
         <ul class="contacts-nav">
-        <li class="contacts item">
-            <svg
-                class="email-icon"
-                width="16"
-                height="12"
-            > <use href="images/icons.svg#icon-email"></use>
-            </svg>
-            <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
-        </li>
         <li class="contacts item">            
-            <svg
-                class="phone-icon"
-                width="13"
-                height="19"
-            >
-                <use href="images/icons.svg#icon-phone"></use>
-            </svg>
-            <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
-            
+            <a href="mailto:info@devstudio.com" class="contact-link">
+                <svg class="email-icon" width="16" height="12">
+                <use href="images/icons.svg#icon-email"></use>
+                </svg>info@devstudio.com</a>
+        </li>
+        <li class="contacts item">
+            <a href="tel:+380961111111" class="contact-link">
+                <svg class="phone-icon" width="10" height="16">
+                    <use href="images/icons.svg#icon-phone"></use>
+                </svg>
+                +38 096 111 11 11</a>            
         </li>       
     </ul>
     </nav> 
@@ -79,18 +72,47 @@
         <h2 class="features-title section-title visually-hidden">Преимущества</h2>
         <ul class="features-list">
             <li class="features-list-items">
+                <div class="features-icon">
+                <svg width="70" height="70">
+                    <use href="images/icons.svg#icon-features-01"></use>
+                </svg>
+                </div>
                 <h3 class="features-list-title">Внимание к деталям</h3>
                 <p class="features-list-text"> Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>            
             <li class="features-list-items">
+                <div class="features-icon">
+                    <svg
+                        width="70"
+                        height="70"
+                    >
+                        <use href="images/icons.svg#icon-features-02"></use>
+                    </svg>
+                </div>
                 <h3 class="features-list-title">Пунктуальность</h3>
                 <p class="features-list-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>            
             <li class="features-list-items">
+                <div class="features-icon">
+                    <svg
+                        width="70"
+                        height="70"
+                    >
+                        <use href="images/icons.svg#icon-features-03"></use>
+                    </svg>
+                </div>
                 <h3 class="features-list-title">Планирование</h3>
                 <p class="features-list-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li class="features-list-items">
+                <div class="features-icon">
+                    <svg
+                        width="70"
+                        height="70"
+                    >
+                        <use href="images/icons.svg#icon-features-04"></use>
+                    </svg>
+                </div>
                 <h3 class="features-list-title">Современные технологии</h3>
                 <p class="features-list-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
@@ -118,23 +140,276 @@
         <li class="members-item">        
             <img src="./images/ihor.jpg" alt="Игорь Демьяненко" width="270">
             <div class="members-box"><h3 class="members-title">Игорь Демьяненко</h3>
-            <p class="members-text">Product Designer</p></div>            
-        </li>
+            <p class="members-text">Product Designer</p></div>
+            <ul class="social">
+                <li class="social-items">
+                    <a class="social-links" href="">
+                    <svg class="social-icons" width="20" height="20">
+                        <use href="images/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+                </li>
+                <li class="social-items">
+                    <a class="social-links" href="">
+                    <svg class="social-icons" width="20" height="20">
+                        <use href="images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+                </li>
+                <li class="social-items">
+                    <a class="social-links" href="">
+                    <svg class="social-icons" width="20" height="20">
+                    <use href="images/icons.svg#icon-facebook"></use>
+                </svg>
+                </a>
+                </li>
+                <li class="social-items">
+                    <a class="social-links" href="">
+                    <svg class="social-icons" width="20" height="20">
+                        <use href="images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+                </li>
+                </ul>
+                    </li>
+
+
         <li class="members-item">
             <img src="./images/olha.jpg" alt="Ольга Репина" width="270">
             <div class="members-box"><h3 class="members-title">Ольга Репина</h3>
-            <p class="members-text">Frontend Developer</p></div>            
+            <p class="members-text">Frontend Developer</p></div>
+            <ul class="social">
+                <li class="social-items">
+                    <a
+                        class="social-links"
+                        href=""
+                    >
+                        <svg
+                            class="social-icons"
+                            width="20"
+                            height="20"
+                        >
+                            <use href="images/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-items">
+                    <a
+                        class="social-links"
+                        href=""
+                    >
+                        <svg
+                            class="social-icons"
+                            width="20"
+                            height="20"
+                        >
+                            <use href="images/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-items">
+                    <a
+                        class="social-links"
+                        href=""
+                    >
+                        <svg
+                            class="social-icons"
+                            width="20"
+                            height="20"
+                        >
+                            <use href="images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-items">
+                    <a
+                        class="social-links"
+                        href=""
+                    >
+                        <svg
+                            class="social-icons"
+                            width="20"
+                            height="20"
+                        >
+                            <use href="images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
         </li>        
         <li class="members-item">
             <img src="./images/nikolay.jpg" alt="Николай Тарасов" width="270">
             <div class="members-box"><h3 class="members-title">Николай Тарасов</h3>
-            <p class="members-text">Marketing</p></div>            
+            <p class="members-text">Marketing</p></div>  
+            <ul class="social">
+                <li class="social-items">
+                    <a
+                        class="social-links"
+                        href=""
+                    >
+                        <svg
+                            class="social-icons"
+                            width="20"
+                            height="20"
+                        >
+                            <use href="images/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-items">
+                    <a
+                        class="social-links"
+                        href=""
+                    >
+                        <svg
+                            class="social-icons"
+                            width="20"
+                            height="20"
+                        >
+                            <use href="images/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-items">
+                    <a
+                        class="social-links"
+                        href=""
+                    >
+                        <svg
+                            class="social-icons"
+                            width="20"
+                            height="20"
+                        >
+                            <use href="images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-items">
+                    <a
+                        class="social-links"
+                        href=""
+                    >
+                        <svg
+                            class="social-icons"
+                            width="20"
+                            height="20"
+                        >
+                            <use href="images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
         </li>
         <li class="members-item">
             <img src="./images/michael.jpg" alt="Михаил Ермаков" width="270">
             <div class="members-box"><h3 class="members-title">Михаил Ермаков</h3>
-            <p class="members-text">UI Designer</p></div>           
+            <p class="members-text">UI Designer</p></div>
+            <ul class="social">
+                <li class="social-items">
+                    <a
+                        class="social-links"
+                        href=""
+                    >
+                        <svg
+                            class="social-icons"
+                            width="20"
+                            height="20"
+                        >
+                            <use href="images/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-items">
+                    <a
+                        class="social-links"
+                        href=""
+                    >
+                        <svg
+                            class="social-icons"
+                            width="20"
+                            height="20"
+                        >
+                            <use href="images/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-items">
+                    <a
+                        class="social-links"
+                        href=""
+                    >
+                        <svg
+                            class="social-icons"
+                            width="20"
+                            height="20"
+                        >
+                            <use href="images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-items">
+                    <a
+                        class="social-links"
+                        href=""
+                    >
+                        <svg
+                            class="social-icons"
+                            width="20"
+                            height="20"
+                        >
+                            <use href="images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
         </li>
+    </ul>
+    </div>
+    </section>
+
+    <section class="client section">
+    <div class="client container">
+    <h2 class="client section-title">Постоянные клиенты</h2>
+    <ul class="clients-list">
+        <li class="clients-item"><a href="" class="clients-icon">
+            <svg class="clients-svg"
+            width="106"
+            height="60"
+        >
+            <use href="images/icons.svg#icon-clients-01"></use>
+        </svg></a>
+    </li>
+
+        <li class="clients-item"><a href="" class="clients-icon"><svg class="clients-svg"
+            width="106"
+            height="60"
+        >
+            <use href="images/icons.svg#icon-clients-02"></use>
+        </svg></a></li>
+        <li class="clients-item"><a href="" class="clients-icon"><svg class="clients-svg"
+            width="106"
+            height="60"
+        >
+            <use href="images/icons.svg#icon-clients-03"></use>
+        </svg></a></li>
+        <li class="clients-item"><a href="" class="clients-icon"><svg class="clients-svg"
+            width="106"
+            height="60"
+        >
+            <use href="images/icons.svg#icon-clients-04"></use>
+        </svg></a></li>
+        <li class="clients-item"><a href="" class="clients-icon"><svg class="clients-svg"
+            width="106"
+            height="60"
+        >
+            <use href="images/icons.svg#icon-clients-05"></use>
+        </svg></a></li>
+        <li class="clients-item"><a href="" class="clients-icon"><svg class="clients-svg"
+            width="106"
+            height="60"
+        >
+            <use href="images/icons.svg#icon-clients-06"></use>
+        </svg></a></li>
     </ul>
     </div>
     </section>
@@ -153,7 +428,7 @@
             <li class="footer-info-item"><a href="tel:+380991111111" 
                 class="footer-contacts">+38 099 111 11 11</a></li>
                 </ul>
-        </address>
+        </address>        
     </div>    
 </footer>
 </body>
