Добавляет подчеркивание в Хедере

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,15 +37,15 @@
             <ul class="site-nav">
                 <li class="item"><a
                         href="./index.html"
-                        class="link current"
+                        class="link "
                     >Студия</a></li>
                 <li class="item"><a
                         href="./portfolio.html"
-                        class=link
+                        class= "link current"
                     >Портфолио</a></li>
                 <li class="item"><a
                         href=""
-                        class=link
+                        class="link"
                     >Контакты</a></li>
             </ul>
             <ul class="contacts-nav">
@@ -96,7 +96,8 @@
         </ul>
             
         <ul class="work-list">
-            <li class="work-list-item"><a href="" class="work-list-link">
+            <li class="work-list-item">
+                <a href="" class="work-list-link">
                 <img src="./images/portfolio/tehno.jpg" alt="Технокряк" width="370">
                 <div class="work-list-box">
                 <h2 class="work-list-title">Технокряк</h2>
@@ -104,7 +105,8 @@
                 </div>
                 </a>
             </li>
-            <li class="work-list-item"> <a href="" class="work-list-link">
+            <li class="work-list-item"> 
+                <a href="" class="work-list-link">
                 <img src="./images/portfolio/orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370">
                 <div class="work-list-box">
                 <h2 class="work-list-title">Постер New Orlean vs Golden Star</h2>
@@ -112,7 +114,8 @@
                 </div>
                 </a>
             </li>
-            <li class="work-list-item"> <a href="" class="work-list-link">
+            <li class="work-list-item"> 
+                <a href="" class="work-list-link">
                 <img src="./images/portfolio/restoraunt.jpg" alt="Ресторан Seafood" width="370">
                 <div class="work-list-box">
                 <h2 class="work-list-title">Ресторан Seafood</h2>
@@ -120,7 +123,8 @@
                 </div>
                 </a>
             </li>
-            <li class="work-list-item"> <a href="" class="work-list-link">
+            <li class="work-list-item">
+                <a href="" class="work-list-link">
                 <img src="./images/portfolio/prime.jpg" alt="Проект Prime" width="370">
                 <div class="work-list-box">
                 <h2 class="work-list-title">Проект Prime</h2>
@@ -128,7 +132,8 @@
                 </div>
                 </a>
             </li>
-            <li class="work-list-item"> <a href="" class="work-list-link"> 
+            <li class="work-list-item">
+                <a href="" class="work-list-link"> 
                 <img src="./images/portfolio/box.jpg" alt="Проект Boxes" width="370">
                 <div class="work-list-box">
                 <h2 class="work-list-title">Проект Boxes</h2>
@@ -136,7 +141,8 @@
                 </div>
                 </a>
             </li>
-            <li class="work-list-item"> <a href="" class="work-list-link">
+            <li class="work-list-item"> 
+                <a href="" class="work-list-link">
                 <img src="./images/portfolio/inspirations.jpg" alt="Веб-сайт Inspiration has no Borders" width="370">
                 <div class="work-list-box">
                 <h2 class="work-list-title">Inspiration has no Borders</h2>
@@ -144,7 +150,8 @@
                 </div>
                 </a>
             </li>
-            <li class="work-list-item"> <a href="" class="work-list-link"> 
+            <li class="work-list-item">
+                <a href="" class="work-list-link"> 
                 <img src="./images/portfolio/limited.jpg" alt="Издание Limited Edition" width="370">
                 <div class="work-list-box">
                 <h2 class="work-list-title">Издание Limited Edition</h2>
@@ -152,7 +159,8 @@
                 </div>
                 </a>
             </li>
-            <li class="work-list-item"> <a href="" class="work-list-link">
+            <li class="work-list-item"> 
+                <a href="" class="work-list-link">
                 <img src="./images/portfolio/lab.jpg" alt="Проект LAB" width="370">
                 <div class="work-list-box">
                 <h2 class="work-list-title">Проект LAB</h2>
@@ -160,7 +168,8 @@
                 </div>
                 </a>
             </li>
-            <li class="work-list-item"> <a href="" class="work-list-link">
+            <li class="work-list-item"> 
+                <a href="" class="work-list-link">
                 <img src="./images/portfolio/business.jpg" alt="Приложение Growing Business" width="370">
                 <div class="work-list-box">
                 <h2 class="work-list-title">Growing Business</h2>
