Добавляет  надписи картинок раздела "Чем мы занимаемся"

--- a/index.html
+++ b/index.html
@@ -120,14 +120,25 @@
         </div>        
         </section>
 
-        <!--Деятельность-->
+        <!--Чем мы занимаемся-->
         <section class="activity section">
         <div class="activity-section container">
         <h2 class="activity section-title">Чем мы занимаемся</h2>        
         <ul class="activity-list">
-        <li class="activity-item"><img src="./images/notebook.jpg" alt="Ноутбук" width="370"></li>
-        <li class="activity-item"><img src="./images/mobilephone.jpg" alt="Телефон" width="370"></li>
-        <li class="activity-item"><img src="./images/tablet.jpg" alt="Планшет" width="370"></li>
+        <li class="activity-item">
+            <img class="activity-img" src="./images/notebook.jpg" alt="Ноутбук" width="370">
+            <p class="activity-text">Десктопные приложения</p>
+        </li>
+
+        <li class="activity-item">
+            <img class="activity-img" src="./images/mobilephone.jpg" alt="Телефон" width="370">
+            <p class="activity-text">Мобильные приложения</p>
+        </li>
+
+        <li class="activity-item">
+            <img class="activity-img" src="./images/tablet.jpg" alt="Планшет" width="370">
+            <p class="activity-text">Дизайнерские решения</p>
+        </li>
         </ul>
         </div>        
     </section>
