Добавляет анимацию на все ховеры, добавляет всплывающее окно в Портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -97,17 +97,28 @@
             
         <ul class="work-list">
             <li class="work-list-item">
+                <div class="work-list-wrapper">
                 <a href="" class="work-list-link">
-                <img src="./images/portfolio/tehno.jpg" alt="Технокряк" width="370">
+                <img class="work-list-img" src="./images/portfolio/tehno.jpg" alt="Технокряк" width="370">
+                <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
                 <div class="work-list-box">
                 <h2 class="work-list-title">Технокряк</h2>
                 <p class="work-list-text">Веб-сайт</p>
-                </div>
+                </div>                
                 </a>
             </li>
+
+
             <li class="work-list-item"> 
+                <div class="work-list-wrapper">
                 <a href="" class="work-list-link">
-                <img src="./images/portfolio/orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                <img class="work-list-img" src="./images/portfolio/orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
+                    эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
                 <div class="work-list-box">
                 <h2 class="work-list-title">Постер New Orlean vs Golden Star</h2>
                 <p class="work-list-text">Дизайн</p>
@@ -115,8 +126,12 @@
                 </a>
             </li>
             <li class="work-list-item"> 
-                <a href="" class="work-list-link">
-                <img src="./images/portfolio/restoraunt.jpg" alt="Ресторан Seafood" width="370">
+                <div class="work-list-wrapper"><a href="" class="work-list-link">
+                <img class="work-list-img" src="./images/portfolio/restoraunt.jpg" alt="Ресторан Seafood" width="370">
+                <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
+                    эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                 <div class="work-list-box">
                 <h2 class="work-list-title">Ресторан Seafood</h2>
                 <p class="work-list-text">Приложение</p>
@@ -124,8 +139,13 @@
                 </a>
             </li>
             <li class="work-list-item">
+                <div class="work-list-wrapper">
                 <a href="" class="work-list-link">
-                <img src="./images/portfolio/prime.jpg" alt="Проект Prime" width="370">
+                <img class="work-list-img" src="./images/portfolio/prime.jpg" alt="Проект Prime" width="370">
+                <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
+                    эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                 <div class="work-list-box">
                 <h2 class="work-list-title">Проект Prime</h2>
                 <p class="work-list-text">Маркетинг</p>
@@ -133,8 +153,13 @@
                 </a>
             </li>
             <li class="work-list-item">
+                <div class="work-list-wrapper">
                 <a href="" class="work-list-link"> 
-                <img src="./images/portfolio/box.jpg" alt="Проект Boxes" width="370">
+                <img class="work-list-img" src="./images/portfolio/box.jpg" alt="Проект Boxes" width="370">
+                <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
+                    эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
                 <div class="work-list-box">
                 <h2 class="work-list-title">Проект Boxes</h2>
                 <p class="work-list-text">Приложение</p>
@@ -142,8 +167,13 @@
                 </a>
             </li>
             <li class="work-list-item"> 
+                <div class="work-list-wrapper">
                 <a href="" class="work-list-link">
-                <img src="./images/portfolio/inspirations.jpg" alt="Веб-сайт Inspiration has no Borders" width="370">
+                <img class="work-list-img" src="./images/portfolio/inspirations.jpg" alt="Веб-сайт Inspiration has no Borders" width="370">
+                <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
+                    эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                 <div class="work-list-box">
                 <h2 class="work-list-title">Inspiration has no Borders</h2>
                 <p class="work-list-text">Веб-сайт</p>
@@ -151,8 +181,13 @@
                 </a>
             </li>
             <li class="work-list-item">
+                <div class="work-list-wrapper">
                 <a href="" class="work-list-link"> 
-                <img src="./images/portfolio/limited.jpg" alt="Издание Limited Edition" width="370">
+                <img class="work-list-img" src="./images/portfolio/limited.jpg" alt="Издание Limited Edition" width="370">
+                <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
+                    эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                 <div class="work-list-box">
                 <h2 class="work-list-title">Издание Limited Edition</h2>
                 <p class="work-list-text">Дизайн</p>
@@ -160,8 +195,13 @@
                 </a>
             </li>
             <li class="work-list-item"> 
+                <div class="work-list-wrapper">
                 <a href="" class="work-list-link">
-                <img src="./images/portfolio/lab.jpg" alt="Проект LAB" width="370">
+                <img class="work-list-img" src="./images/portfolio/lab.jpg" alt="Проект LAB" width="370">
+                <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
+                    эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                 <div class="work-list-box">
                 <h2 class="work-list-title">Проект LAB</h2>
                 <p class="work-list-text">Маркетинг</p>
@@ -169,8 +209,13 @@
                 </a>
             </li>
             <li class="work-list-item"> 
+                <div class="work-list-wrapper">
                 <a href="" class="work-list-link">
-                <img src="./images/portfolio/business.jpg" alt="Приложение Growing Business" width="370">
+                <img class="work-list-img" src="./images/portfolio/business.jpg" alt="Приложение Growing Business" width="370">
+                <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
+                    эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                 <div class="work-list-box">
                 <h2 class="work-list-title">Growing Business</h2>
                 <p class="work-list-text">Приложение</p>
@@ -187,10 +232,7 @@
         <div class="footer container">
             <div class="footer-left">
                 <nav class="footer nav">
-                    <a
-                        href="./index.html"
-                        class="nav-logo"
-                    >
+                    <a href="./index.html" class="nav-logo" >
                         <span class="logo-accent">Web</span><span class="logo-white">Studio</span></a>
                 </nav>
                 <address>
