Добавляет модальное окно

--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@
         <ul class="work-list">
             <li class="work-list-item">
                 <div class="work-list-wrapper">
-                <a href="" class="work-list-link">
+                <a class="work-list-link" href="" >
                 <img class="work-list-img" src="./images/portfolio/tehno.jpg" alt="Технокряк" width="370">
                 <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                 шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -109,11 +109,9 @@
                 </div>                
                 </a>
             </li>
-
-
             <li class="work-list-item"> 
                 <div class="work-list-wrapper">
-                <a href="" class="work-list-link">
+                <a class="work-list-link" href="">
                 <img class="work-list-img" src="./images/portfolio/orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370">
                 <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
                     эту платформу для цифрового
@@ -126,7 +124,8 @@
                 </a>
             </li>
             <li class="work-list-item"> 
-                <div class="work-list-wrapper"><a href="" class="work-list-link">
+                <div class="work-list-wrapper">
+                    <a class="work-list-link" href="" >
                 <img class="work-list-img" src="./images/portfolio/restoraunt.jpg" alt="Ресторан Seafood" width="370">
                 <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
                     эту платформу для цифрового
@@ -140,7 +139,7 @@
             </li>
             <li class="work-list-item">
                 <div class="work-list-wrapper">
-                <a href="" class="work-list-link">
+                <a class="work-list-link" href="" >
                 <img class="work-list-img" src="./images/portfolio/prime.jpg" alt="Проект Prime" width="370">
                 <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
                     эту платформу для цифрового
@@ -154,7 +153,7 @@
             </li>
             <li class="work-list-item">
                 <div class="work-list-wrapper">
-                <a href="" class="work-list-link"> 
+                <a class="work-list-link" href="" > 
                 <img class="work-list-img" src="./images/portfolio/box.jpg" alt="Проект Boxes" width="370">
                 <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
                     эту платформу для цифрового
@@ -168,7 +167,7 @@
             </li>
             <li class="work-list-item"> 
                 <div class="work-list-wrapper">
-                <a href="" class="work-list-link">
+                <a class="work-list-link" href="" >
                 <img class="work-list-img" src="./images/portfolio/inspirations.jpg" alt="Веб-сайт Inspiration has no Borders" width="370">
                 <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
                     эту платформу для цифрового
@@ -182,7 +181,7 @@
             </li>
             <li class="work-list-item">
                 <div class="work-list-wrapper">
-                <a href="" class="work-list-link"> 
+                <a class="work-list-link" href="" > 
                 <img class="work-list-img" src="./images/portfolio/limited.jpg" alt="Издание Limited Edition" width="370">
                 <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
                     эту платформу для цифрового
@@ -196,7 +195,7 @@
             </li>
             <li class="work-list-item"> 
                 <div class="work-list-wrapper">
-                <a href="" class="work-list-link">
+                <a class="work-list-link" href="" >
                 <img class="work-list-img" src="./images/portfolio/lab.jpg" alt="Проект LAB" width="370">
                 <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
                     эту платформу для цифрового
@@ -210,7 +209,7 @@
             </li>
             <li class="work-list-item"> 
                 <div class="work-list-wrapper">
-                <a href="" class="work-list-link">
+                <a class="work-list-link" href="" >
                 <img class="work-list-img" src="./images/portfolio/business.jpg" alt="Приложение Growing Business" width="370">
                 <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
                     эту платформу для цифрового
