--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
     <section class="hero section">
         <div class="hero container">    
         <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
-        <button type="button" class="hero-button">Заказать услугу</button>
+        <button 
+        type="button" 
+        class="hero-button" data-modal-open>
+        Заказать услугу</button>
         </div>
     </section>
     
@@ -475,7 +478,23 @@
     </li>
 </ul>
 </div>      
-</div>    
+</div>
+
+<div class="backdrop is-hidden" data-modal>
+    <div class="modal">
+        <button type="button" class="modal-button" data-modal-close >
+            <svg
+                class="modal-icons"
+                width="11"
+                height="11"
+            >
+                <use href="images/icons.svg#icon-close-button"></use>
+            </svg>
+        </button>
+    </div>
+</div>
 </footer>
+<script src="./js/modal.js"></script>
 </body>
 </html>
+
