--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
 </ul>
 </div>      
 </div>
-
+<!-- МОДАЛКА -->
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
         <button type="button" class="modal-button" data-modal-close >
@@ -491,6 +491,50 @@
                 <use href="images/icons.svg#icon-close-button"></use>
             </svg>
         </button>
+
+        <!-- Форма -->
+        <p class="modal-title">
+            Оставьте свои данные, мы вам перезвоним
+        </p>
+        <form>
+            <div>
+            <label class="modal-label" for="">Имя</label>
+            <input type="text">
+            </div>
+
+            <div>
+                <label
+                    class="modal-label"
+                    for=""
+                >Телефон</label>
+                <input type="tel">
+            </div>
+
+            <div>
+                <label
+                    class="modal-label"
+                    for=""
+                >Почта</label>
+                <input type="mail">
+            </div>
+
+            <div>
+                <label
+                    class="modal-label"
+                    for=""
+                >Комментарий</label>
+                <textarea name="" id="" placeholder="Введите текст"></textarea>
+            </div>
+        <div>
+            <input type="checkbox" name="policy" id="policy" class="modal-check">
+            <label for="policy" class="modal-check-text">
+                Соглашаюсь с рассылкой и принимаю Условия договора
+            </label>
+        </div>
+        <button type="submit">Отправить</button>
+        </form>
+
+
     </div>
 </div>
 </footer>
